<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.minijvm</groupId>
    <artifactId>glfm_gui</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    

    <dependencies>
        <dependency>
            <groupId>org.minijvm</groupId>  
            <artifactId>minijvm_rt</artifactId>   
            <version>1.0</version>
            <scope>system</scope> 
            <systemPath>${basedir}/../../assets/resfiles/minijvm_rt.jar</systemPath> 
        </dependency> 
    </dependencies>
    
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>   
                <artifactId>maven-antrun-plugin</artifactId>    
                <executions>       
                    <execution>         
                        <phase>package</phase>        
                        <goals>            
                            <goal>run</goal>        
                        </goals>             
                        <configuration>       
                            <tasks>
                                <!--  copy to binary lib dir -->
                                <mkdir dir="../../assets/resfiles"/>        
                                <copy todir="../../assets/resfiles/" overwrite="true" > 
                                    <fileset dir="${project.build.directory}" erroronmissingdir="false">
                                        <include name="${project.artifactId}.jar"/>
                                    </fileset>
                                </copy>        
                            </tasks>        
                        </configuration>        
                    </execution>    
                </executions>  
            </plugin>   
        </plugins>
        
            
        <resources>
            <resource>
                <directory>src/main/resource</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>


        
        
    </build>
</project>